[gd_scene load_steps=2 format=3 uid="uid://3q4xynok2j3f"]

[ext_resource type="Script" uid="uid://bpqa6vg4mc7av" path="res://scripts/clipboardview.gd" id="1_i810b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i810b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PageTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
stretch_mode = 3

[node name="PrevButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="pressed" from="PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
